--- a/signaturenDruck/defaultFiles/thulb_klein.css
+++ b/signaturenDruck/defaultFiles/thulb_klein.css
@@ -41,6 +41,6 @@ margin-left: 45%;
 }
 @media print {
 #toPrint.format_thulb_klein > .innerBox {
-margin: 2.25mm 0mm 0mm -1.75mm;
+margin: 2.25mm 0mm 0mm 0.75mm;
 }
 }
